[package]
name = "psbt"
version = "0.1.0-alpha.1"
authors = ["Dr. Maxim Orlovsky <orlovsky@pandoracore.com>"]
license = "CC0-1.0"
description = "Rust crate implementing partially-signed bitcoin transactions spec (BIP-174), as a library and a command-line tool"
documentation = "https://docs.rs/psbt/"
keywords = [ "crypto", "bitcoin", "psbt" ]
categories = [ "cryptography::cryptocurrencies", "data-structures", "wasm" ]
readme = "README.md"
edition = "2018"

[[bin]]
name = "psbt"
required-features = [ "cli" ]

[lib]
name = "psbt"
path = "src/lib.rs"

[features]
default = ["std", "serde"]
all = ["std", "serde", "cli"]
std = []
# Used to build command-line tool
cli = ["serde", "serde_yaml", "serde_json", "toml"]
serde = ["serde_crate", "serde_with", "bitcoin/use-serde"]
unstable = [] # for benchmarking
# For fuzzified testing, DON'T use for normal builds!
fuzztarget = ["bitcoin/fuzztarget"]

[dependencies]
bitcoin = "0.26"
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
serde_with = { version = "1.5", optional = true } # Used by cli only
serde_json = { version = "1", optional = true } # Used by cli only
serde_yaml = { version = "0.8", optional = true } # Used by cli only
toml = { version = "0.5", optional = true } # Used by cli only

[dev-dependencies]
bitcoin = { version = "0.26", features = ["rand"] }

[target.wasm32-unknown-unknown.dev-dependencies]
wasm-bindgen-test = "0.3"
