[workspace]
members = [
    "derive",
    "psbt",
    "descriptors"
]
default-members = [
    "derive",
    "psbt",
    "descriptors"
]

[workspace.package]
authors = ["Dr Maxim Orlovsky <orlovsky@lnp-bp.org>"]
homepage = "https://lnp-bp.org"
repository = "https://github.com/BP-WG/bp-bips"
rust-version = "1.60" # Due to rust-amplify
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
amplify = "4.0.0-beta.17"
bp-primitives = "0.10.0-beta.2"
