[package]
name = "bitcoin_hd"
version = "0.10.0"
description = "Bitcoin hierarchical deterministic derivation library"
keywords = ["bitcoin", "wallet", "hd-wallet", "bip32", "bip44"]
categories = ["cryptography::cryptocurrencies", "encoding", "parsing"]
readme = "README.md"
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
amplify = { workspace = true }
secp256k1 = { version = "0.26.0", features = ["global-context"], optional = true }
base58 = "0.2.0" # TODO: Replace base58 with no-std implementation!
bitcoin_hashes = "0.11.0" # TODO: Replace with different Ripemd160 implementation

[features]
default = []
all = ["secp256k1"]
private-keys = []
