[package]
name = "descriptors"
version = "0.10.0"
keywords = ["bitcoin", "wallet", "descriptors", "descriptor-wallet", "bip380"]
categories = ["cryptography::cryptocurrencies", "encoding", "parsing"]
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
amplify = { workspace = true }
