[package]
name = "descriptors"
version = "0.10.0"
description = "Bitcoin descriptors implementation"
keywords = ["bitcoin", "wallet", "descriptors", "descriptor-wallet", "bip380"]
categories = ["cryptography::cryptocurrencies", "encoding", "parsing"]
readme = "README.md"
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
amplify = { workspace = true }
bp-primitives = { workspace = true }
secp256k1 = { version = "0.26.0", features = ["global-context"] }
